Day 6 watched form videos

--- a/005-008-html5/yahoo_clone/index.html
+++ b/005-008-html5/yahoo_clone/index.html
@@ -62,7 +62,7 @@
         <a href="#">Yahooligans</a>-
         <a href="#">Yahoo Shop</a>-
         <a href="#">Yahoo Internet Life</a>
-
+        <a href="#">Day 6 watched videos</a>
     </div>
 
 </body>
