day 8- add registration form to google

--- a/005-008-html5/yahoo_clone/google_clone/google_clone/index.html
+++ b/005-008-html5/yahoo_clone/google_clone/google_clone/index.html
@@ -16,6 +16,9 @@
                 <button type="submit">I'm Feeling Lucky</button>
             </br>
         </form>
+        <div style="text-align: center">
+            <a href="registration.html">Register!</a>
+        </div>
     </div>
     <table style="text-align: center" align="center" border="0" width="90%">
         <tr>
