day 11- watched CSS videos

--- a/013-016-css-basics/demos/selectorville/layout.html
+++ b/013-016-css-basics/demos/selectorville/layout.html
@@ -30,7 +30,7 @@
 <div class="page-content">
 
     <p>
-        Lorem ipsum dolor amet bushwick banh mi irony sustainable twee slow-carb whatever iPhone austin kale chips vegan
+        Watched videos for CSS day Lorem ipsum dolor amet bushwick banh mi irony sustainable twee slow-carb whatever iPhone austin kale chips vegan
         meh flannel sartorial crucifix. Lyft ramps biodiesel asymmetrical offal, four dollar toast succulents meggings
         microdosing mumblecore pitchfork humblebrag. Offal kinfolk scenester, sustainable adaptogen coloring book copper
         mug salvia ennui williamsburg green juice. 8-bit keffiyeh palo santo, distillery leggings raw denim shoreditch.
